--- a/getting-started/quickstart/data-access.mdx
+++ b/getting-started/quickstart/data-access.mdx
@@ -435,15 +435,13 @@ Here's what you can expect from common endpoints:
 	<Card title="API Guides" icon="book" href="/guides/access">
 		Explore all available OnlyFans data endpoints and features
 	</Card>
-	<Card title="Production Setup" icon="shield" href="/guides/link/hosted">
-		Configure webhooks and production best practices
+	<Card title="Going to Production" icon="shield" href="/getting-started/production-considerations">
+		Critical reliability and risk management before you launch
 	</Card>
 </CardGroup>
-
-
 
 ---
 
 <Info>
-	**Data access working?** Perfect! You now have the core knowledge to build OnlyFans integrations. Check out our [API guides](/guides/link/overview) for advanced features.
+	**Data access working?** You now have the core knowledge to build OnlyFans integrations. Check out the [Integration Guides](/guides/link/overview) for advanced features.
 </Info>
