--- a/getting-started/quickstart/index.mdx
+++ b/getting-started/quickstart/index.mdx
@@ -9,6 +9,10 @@ description: "Choose your path to get started with OFAuth APIs"
 Get from zero to working OnlyFans integration quickly with our step-by-step
 guides. Choose the path that matches your needs:
 
+<Tip>
+	**New to OFAuth?** Read [Core Concepts](/getting-started/concepts) first to understand how Link, Access, and Connections work together.
+</Tip>
+
 <CardGroup cols={2}>
 	<Card title="Account Setup" icon="user" href="/getting-started/quickstart/account-setup">
 		**First steps** - Create account, get API keys, and verify access
