--- a/sdk/core-concepts/authentication.mdx
+++ b/sdk/core-concepts/authentication.mdx
@@ -50,48 +50,17 @@ const { data, error } = await sdk.user.getById({
   **Connection IDs** are obtained through OFAuth Link and represent authorized connections to specific OnlyFans accounts. See the [Link documentation](/guides/link/overview) for setup details.
 </Info>
 
-## Direct Mode (Advanced)
+## Direct Mode (Enterprise)
 
-**For advanced use cases** where you need full control over the authentication flow.
-
-### Setup
-
-```typescript
-const sdk = new OFSDK({
-  mode: "direct",
-  ofauthApiKey: process.env.OFAUTH_API_KEY // Required for request signing
-})
-```
-
-### Authentication Flow
-
-```typescript
-// 1. Create authentication session
-const authSession = await sdk.link.initSession({
-  mode: "whitelabel",
-  clientReferenceId: "unique_session_id"
-})
-
-// 2. Login with credentials
-const loginResult = await sdk.link.loginWithCredentials(
-  authSession.clientSecret,
-  "user@example.com", 
-  "password123"
-)
-
-// 3. Use session for API calls
-if (loginResult.status === "completed") {
-  const session = loginResult.data.session
-  
-  const { data } = await sdk.self.getMe({
-    authentication: { session }
-  })
-}
-```
+**For enterprise partners** with approved whitelabel integrations who need full control over the authentication flow.
 
 <Warning>
-  **Advanced & Approval Required**: Direct/whitelabel mode requires handling 2FA, session management, and hardened security controls. These flows are available only to approved partners. Use Access mode unless OFAuth has explicitly enabled this level of control for your account.
+  **Approval Required**: Direct mode is part of [Enterprise Whitelabel](/enterprise/whitelabel) and requires approval. Contact [support@ofauth.com](mailto:support@ofauth.com) with your use case before implementing.
 </Warning>
+
+<Card title="Enterprise Whitelabel" icon="building" href="/enterprise/whitelabel">
+  Learn about enterprise whitelabel capabilities and how to request access
+</Card>
 
 ## Custom Mode (Enterprise)
 
