--- a/sdk/index.mdx
+++ b/sdk/index.mdx
@@ -1,12 +1,16 @@
 ---
-title: "OnlyFans JavaScript SDK"
+title: "OnlyFans TypeScript SDK"
 sidebarTitle: "Introduction"
 description: "The easiest way to integrate OnlyFans into your JavaScript/TypeScript applications"
 ---
 
 ## The SDK That Powers OnlyFans Integrations
 
-Production-ready TypeScript SDKs that eliminate 90% of OnlyFans integration complexity. Choose open source for unlimited requests or managed for maximum convenience.
+Production-ready TypeScript SDK that eliminates 90% of OnlyFans integration complexity. Full type safety, automatic error handling, and built-in retry logic.
+
+<Info>
+	**Using Python, Go, PHP, or another language?** Use our [REST APIs](/guides/access) directly - they work with any language that can make HTTP requests. This SDK documentation covers TypeScript/JavaScript only.
+</Info>
 
 ### Development ROI
 - **$50K-120K saved** in first-year development costs
@@ -29,11 +33,35 @@ Production-ready TypeScript SDKs that eliminate 90% of OnlyFans integration comp
   </Card>
 </CardGroup>
 
+---
+
+## SDK vs REST API
+
+Choose the SDK if you're using TypeScript/JavaScript. Use the REST API directly for other languages.
+
+| | TypeScript SDK | REST API |
+|---|---|---|
+| **Languages** | TypeScript, JavaScript | Any |
+| **Type Safety** | Full IntelliSense | None |
+| **Error Handling** | Automatic with retry | Manual |
+| **Learning Curve** | Lower | Higher |
+
+<CardGroup cols={2}>
+  <Card title="SDK Quickstart" icon="code" href="/sdk/quickstart">
+    Get started with the TypeScript SDK
+  </Card>
+  <Card title="REST API Guide" icon="globe" href="/guides/access">
+    Use the API directly from any language
+  </Card>
+</CardGroup>
+
+---
+
 ## Why Choose the SDK Over Direct API?
 
 ### Before: Raw API Calls
 ```javascript
-// Manual HTTP requests with lots of boilerplate (proxy example)
+// Manual HTTP requests with lots of boilerplate
 const response = await fetch("https://api.ofauth.com/v2/access/proxy/chats/rooms/123/messages", {
   method: "POST",
   headers: {
@@ -62,7 +90,7 @@ if (!response.ok) {
 const result = await response.json()
 ```
 
-### After: SDK Magic ✨
+### After: SDK
 ```typescript
 // One line with built-in error handling and retries
 const { data, error } = await sdk.messages.sendChatMessage({
@@ -83,41 +111,44 @@ if (error) {
 }
 ```
 
+---
+
 ## What You Can Build
 
 The SDK unlocks powerful OnlyFans integration possibilities:
 
 <CardGroup cols={3}>
   <Card title="Creator Analytics" icon="chart-bar">
-    **Performance Dashboards** - Track earnings, post performance, and subscriber growth with comprehensive analytics
+    **Performance Dashboards** - Track earnings, post performance, and subscriber growth
   </Card>
   <Card title="Content Management" icon="file-text">
-    **Automated Publishing** - Upload media, create posts, and schedule content with type-safe operations
+    **Automated Publishing** - Upload media, create posts, and schedule content
   </Card>
   <Card title="Fan Engagement" icon="comments">
-    **Messaging Automation** - Send personalized messages, manage subscriber lists, and create campaigns
+    **Messaging Automation** - Send personalized messages and manage campaigns
   </Card>
   <Card title="Subscriber Tools" icon="users">
-    **List Management** - Organize subscribers, track spending, and segment audiences for targeted content
+    **List Management** - Organize subscribers and segment audiences
   </Card>
   <Card title="Revenue Optimization" icon="dollar-sign">
-    **Business Intelligence** - Analyze top-performing content and optimize pricing strategies
+    **Business Intelligence** - Analyze content performance and optimize pricing
   </Card>
   <Card title="Integration Tools" icon="link">
-    **Custom Workflows** - Build integrations with other platforms and automate business processes
+    **Custom Workflows** - Build integrations with other platforms
   </Card>
 </CardGroup>
 
-## Key Features & Benefits
+---
 
-### **Complete Type Safety**
+## Key Features
+
+### Complete Type Safety
 - **Full TypeScript definitions** with IntelliSense autocomplete
 - **Compile-time validation** prevents invalid parameter combinations
 - **Context-aware suggestions** guide correct API usage
-- **Runtime validation** catches errors before API calls
 
 ```typescript
-// ✅ Full IntelliSense support and validation
+// Full IntelliSense support and validation
 const { data, error } = await sdk.statistics.getStats({
   statType: "posts",    // IDE autocompletes valid options
   params: { 
@@ -127,28 +158,19 @@ const { data, error } = await sdk.statistics.getStats({
 })
 ```
 
-### **Parameter Validation**
-- **Automatic validation** of all parameters before API calls
-- **Enum validation** ensures only valid values are accepted
-- **Required field enforcement** at compile time
-- **Context-sensitive validation** prevents impossible combinations
-
-### **Complete OnlyFans Coverage**
+### Complete OnlyFans Coverage
 - **User Management**: Profiles, subscribers, connections
 - **Content Creation**: Posts, media uploads, pricing
 - **Messaging**: Direct messages, mass messaging, rich content
 - **Analytics**: Earnings, subscriber metrics, performance insights
 - **Business Tools**: Promotions, subscriber management, automation
 
-### **Developer Experience**
-- **TypeScript First**: Full type definitions and IntelliSense support
-- **Consistent API**: All methods follow the same `{ data, error }` pattern
-- **Rich Documentation**: Inline docs, examples, and guided workflows
-
-### **Production Features**
+### Production Features
 - **Error Handling**: Structured error types with retry recommendations
 - **Request Signing**: Automatic OnlyFans API signature generation
 - **Monitoring**: Built-in logging and debugging capabilities
+
+---
 
 ## SDK Architecture
 
@@ -172,41 +194,47 @@ The SDK is organized into logical modules that mirror OnlyFans functionality:
   </Card>
 </CardGroup>
 
-## Getting Started
+---
 
-Ready to start building? The SDK provides **guided setup** with comprehensive documentation:
+## Get Started
+
+<Steps>
+  <Step title="Install the SDK">
+    ```bash
+    npm install @ofauth/onlyfans-sdk
+    ```
+  </Step>
+  <Step title="Initialize with your API key">
+    ```typescript
+    import OFSDK from "@ofauth/onlyfans-sdk"
+    
+    const sdk = new OFSDK({
+      mode: "access",
+      ofauthApiKey: process.env.OFAUTH_API_KEY
+    })
+    ```
+  </Step>
+  <Step title="Start building">
+    Use any SDK module to interact with OnlyFans data.
+  </Step>
+</Steps>
 
 <CardGroup cols={2}>
-  <Card title="Installation" icon="download" href="/sdk/quickstart">
-    **Package setup** - Install the SDK and configure your environment
-  </Card>
-  <Card title="Architecture" icon="boxes" href="/sdk/core-concepts/architecture">
-    **Design overview** - Understand the SDK's modular structure and type safety
-  </Card>
-  <Card title="Authentication" icon="key" href="/sdk/core-concepts/authentication">
-    **Auth setup** - Configure connection flows and session management
-  </Card>
-  <Card title="API Reference" icon="book" href="/sdk/modules/authentication/link-authentication">
-    **Method docs** - Explore all available operations with examples
-  </Card>
-</CardGroup>
-
-## Next Steps
-
-<CardGroup cols={2}>
-  <Card title="Installation Guide" icon="download" href="/sdk/quickstart">
-    **Package setup** - Install the SDK and configure your environment
+  <Card title="Full Installation Guide" icon="download" href="/sdk/quickstart">
+    Complete setup with all configuration options
   </Card>
   <Card title="SDK Architecture" icon="boxes" href="/sdk/core-concepts/architecture">
-    **Design overview** - Understand type safety and modular structure
+    Understand the modular structure
   </Card>
-  <Card title="Authentication" icon="key" href="/sdk/core-concepts/authentication">
-    **Auth flows** - Set up connections and session management
+  <Card title="Authentication Setup" icon="key" href="/sdk/core-concepts/authentication">
+    Configure connection flows
   </Card>
-  <Card title="Core Modules" icon="book" href="/sdk/modules/authentication/link-authentication">
-    **Method docs** - Explore all SDK operations with examples
+  <Card title="Module Reference" icon="book" href="/sdk/modules/authentication/link-authentication">
+    Explore all available methods
   </Card>
 </CardGroup>
+
+---
 
 <Warning>
   **Ready for Production?** Review our [Production Considerations](/getting-started/production-considerations) guide for important deployment and security information. 
